--- a/memo-translate-frontend/popup.html
+++ b/memo-translate-frontend/popup.html
@@ -3,135 +3,226 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Memo Translate - Vocabulary</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
+        /* Specific Popup Overrides */
         body {
-            width: 320px;
-            height: 400px;
+            width: 360px;
+            height: 520px;
             margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', sans-serif;
-            background: #fff;
+            display: flex;
+            flex-direction: column;
+            background: #fdfdfd;
         }
 
-        header {
-            background: #1a73e8;
+        .popup-header {
+            background: linear-gradient(135deg, var(--memo-primary) 0%, #6366f1 100%);
+            padding: 20px 16px;
             color: white;
-            padding: 12px 16px;
-            font-size: 16px;
-            font-weight: 500;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .header-top {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            margin-bottom: 12px;
         }
 
-        #word-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            height: 350px;
-            overflow-y: auto;
+        .search-container {
+            position: relative;
+            margin-top: 10px;
         }
 
-        .word-item {
-            padding: 10px 16px;
-            border-bottom: 1px solid #f0f0f0;
-            display: flex;
-            flex-direction: column;
-            gap: 4px;
+        .search-input {
+            width: 100%;
+            background: rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 8px;
+            padding: 8px 12px 8px 32px;
+            color: white;
+            font-size: 13px;
+            outline: none;
+            transition: all 0.2s;
         }
 
-        .word-item:hover {
-            background: #f8f9fa;
+        .search-input::placeholder {
+            color: rgba(255, 255, 255, 0.7);
         }
 
-        .word-original {
-            font-weight: 600;
-            font-size: 15px;
-            color: #202124;
+        .search-input:focus {
+            background: rgba(255, 255, 255, 0.3);
+            border-color: white;
         }
 
-        .word-translated {
-            color: #5f6368;
+        .search-icon {
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            opacity: 0.7;
             font-size: 14px;
-        }
-
-        .word-meta {
-            font-size: 11px;
-            color: #9aa0a6;
-            margin-top: 4px;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .empty-state {
-            padding: 40px;
-            text-align: center;
-            color: #999;
-            font-size: 14px;
-        }
-
-        .delete-btn {
-            color: #d93025;
-            cursor: pointer;
-            visibility: hidden;
-        }
-
-        .word-item:hover .delete-btn {
-            visibility: visible;
-        }
-
-        a {
-            color: inherit;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
         }
 
         .tabs {
             display: flex;
-            background: #f1f3f4;
-            border-bottom: 1px solid #e0e0e0;
+            background: white;
+            padding: 4px;
+            border-bottom: 1px solid var(--memo-border);
         }
 
         .tab {
             flex: 1;
             text-align: center;
-            padding: 8px;
+            padding: 10px;
             cursor: pointer;
             font-size: 13px;
-            color: #5f6368;
-            border-bottom: 2px solid transparent;
+            font-weight: 600;
+            color: var(--memo-text-light);
+            border-radius: 8px;
+            transition: all 0.2s;
         }
 
         .tab.active {
-            color: #1a73e8;
-            border-bottom: 2px solid #1a73e8;
-            font-weight: 600;
+            background: #f5f3ff;
+            color: var(--memo-primary);
         }
 
-        .tab:hover {
-            background: #e8eaed;
+        #word-list {
+            flex: 1;
+            overflow-y: auto;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+        .word-item {
+            padding: 14px 16px;
+            border-bottom: 1px solid #f3f4f6;
+            transition: background 0.2s;
+            position: relative;
+        }
+
+        .word-item:hover {
+            background: #f9fafb;
+        }
+
+        .word-main {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin-bottom: 4px;
+        }
+
+        .word-text {
+            font-weight: 700;
+            font-size: 15px;
+            color: var(--memo-text);
+            flex: 1;
+        }
+
+        .word-actions {
+            display: flex;
+            gap: 12px;
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+
+        .word-item:hover .word-actions {
+            opacity: 1;
+        }
+
+        .action-icon {
+            cursor: pointer;
+            font-size: 14px;
+            color: var(--memo-text-light);
+        }
+
+        .action-icon:hover {
+            color: var(--memo-primary);
+        }
+
+        .action-icon.delete:hover {
+            color: #ef4444;
+        }
+
+        .word-trans {
+            font-size: 13px;
+            color: #4b5563;
+            margin-bottom: 6px;
+        }
+
+        .word-info {
+            font-size: 11px;
+            color: var(--memo-text-light);
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .empty-state {
+            padding: 60px 40px;
+            text-align: center;
+            color: var(--memo-text-light);
+        }
+
+        .empty-icon {
+            font-size: 40px;
+            margin-bottom: 16px;
+            opacity: 0.5;
+        }
+
+        .footer {
+            padding: 12px 16px;
+            border-top: 1px solid var(--memo-border);
+            display: flex;
+            justify-content: space-between;
+            background: white;
+        }
+
+        .footer-btn {
+            background: none;
+            border: none;
+            color: var(--memo-text-light);
+            font-size: 12px;
+            cursor: pointer;
+            padding: 4px 8px;
+            border-radius: 4px;
+        }
+
+        .footer-btn:hover {
+            background: #f3f4f6;
+            color: var(--memo-text);
         }
     </style>
 </head>
 
 <body>
-    <header>
-        <span>我的生词本</span>
-        <div style="font-size:12px;">
-            <span style="cursor:pointer; margin-right:10px;" id="export-csv">导出Anki</span>
-            <span style="cursor:pointer;" id="clear-all">清空</span>
+    <div class="popup-header">
+        <div class="header-top">
+            <span style="font-size:18px; font-weight:700;">Memo Vocabulary</span>
+            <span id="items-count" style="font-size:12px; opacity:0.8;">0 items</span>
         </div>
-    </header>
+        <div class="search-container">
+            <span class="search-icon">🔍</span>
+            <input type="text" id="search-bar" class="search-input" placeholder="Search saved words...">
+        </div>
+    </div>
+
     <div class="tabs">
         <div class="tab active" id="tab-words">单词</div>
         <div class="tab" id="tab-sentences">句子</div>
     </div>
+
     <ul id="word-list">
-        <!-- List Items -->
+        <!-- JS rendered list -->
     </ul>
+
+    <div class="footer">
+        <button class="footer-btn" id="export-csv">📤 导出 Anki (CSV)</button>
+        <button class="footer-btn" id="clear-all">🗑️ 全部清空</button>
+    </div>
+
     <script src="popup.js"></script>
 </body>
 
