--- a/memo-translate-frontend/popup.html
+++ b/memo-translate-frontend/popup.html
@@ -212,6 +212,12 @@
     <div class="tabs">
         <div class="tab active" id="tab-words">单词</div>
         <div class="tab" id="tab-sentences">句子</div>
+        <div style="flex:1.5; display:flex; align-items:center; justify-content:flex-end; padding-right:12px;">
+            <label
+                style="font-size:11px; color:var(--memo-text-light); cursor:pointer; display:flex; align-items:center; gap:4px;">
+                <input type="checkbox" id="review-toggle" style="margin:0;"> 复习模式
+            </label>
+        </div>
     </div>
 
     <ul id="word-list">
