--- a/memo-translate-frontend/popup.html
+++ b/memo-translate-frontend/popup.html
@@ -262,6 +262,7 @@
     <div class="footer">
         <button class="footer-btn" id="export-csv">📤 导出 Anki (CSV)</button>
         <button class="footer-btn" id="generate-qr">📱 生成二维码</button>
+        <button class="footer-btn" id="soundwave-sync">🌊 声波同步</button>
         <button class="footer-btn" id="clear-all">🗑️ 全部清空</button>
     </div>
 
